[gd_scene load_steps=2 format=3 uid="uid://dmg7ogkewod50"]

[ext_resource type="Script" path="res://scripts/component/blink_component.gd" id="1_v5x5b"]

[node name="Blink_Component" type="Node"]
script = ExtResource("1_v5x5b")

[node name="Timer_Blink_Duration" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Timer_Blink_Interval" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Timer_gradual_interval_change" type="Timer" parent="."]

[connection signal="timeout" from="Timer_Blink_Duration" to="." method="_on_timer_hurt_blink_duration_timeout"]
[connection signal="timeout" from="Timer_Blink_Interval" to="." method="_on_timer_hurt_blink_interval_timeout"]
[connection signal="timeout" from="Timer_gradual_interval_change" to="." method="_on_timer_gradual_interval_change_timeout"]
